--- a/src/contentScript/contentScript.css
+++ b/src/contentScript/contentScript.css
@@ -69,7 +69,7 @@
   font-size: 14px;
   font-weight: 700;
   background-color: #d9d9d9;
-  border-radius: 15px;
+  border-radius: 10px;
   padding-left: 10px;
   padding-right: 10px;
   align-items: center;
